--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".WelComeActivity">
@@ -17,6 +15,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ShowActivity"></activity>
+        <activity android:name=".activity.ScountActivity"/>
     </application>
 
 </manifest>
