--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'pub.devrel:easypermissions:2.0.0'
     implementation 'com.github.crossoverone:StatusBarUtil:1.3.3'
     implementation 'com.chenlittleping:recyclercoverflow:1.0.6'
+    implementation 'com.chenlittleping:recyclercoverflow:1.0.6'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
