--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.weiducinema"
+        applicationId "com.bw.movie"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
