--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.weiducinema">
+    package="com.bw.movie">
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WelComeActivity">
+        <activity android:name="com.example.weiducinema.WelComeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShowActivity"></activity>
-        <activity android:name=".activity.ScountActivity"/>
+        <activity android:name="com.example.weiducinema.ShowActivity" />
+        <activity android:name="com.example.weiducinema.activity.ScountActivity" />
+        <activity android:name="com.example.weiducinema.activity.LoginActivity"></activity>
     </application>
 
 </manifest>
