添加影院页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.weiducinema.WelComeActivity">
+        <activity android:name="com.example.weiducinema.activity.WelComeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,8 +40,9 @@
             </intent-filter>
         </activity>
         <activity android:name="com.example.weiducinema.activity.ScountActivity"/>
-        <activity android:name="com.example.weiducinema.ShowActivity"/>
+        <activity android:name="com.example.weiducinema.activity.ShowActivity"/>
         <activity android:name="com.example.weiducinema.activity.ThreeActivity"/>
+        <activity android:name="com.example.weiducinema.activity.Show_moiver"/>
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="VMMQE1cVVo2mKy5wRqdAixDXGbZPDzFX" />
