--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
         <activity android:name="com.example.weiducinema.activity.ShowActivity"/>
         <activity android:name="com.example.weiducinema.activity.ThreeActivity"/>
         <activity android:name="com.example.weiducinema.activity.Show_moiver"/>
+        <activity android:name="com.example.weiducinema.activity.LoginActivity"/>
+        <activity android:name="com.example.weiducinema.activity.DetailsActivity"/>
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="VMMQE1cVVo2mKy5wRqdAixDXGbZPDzFX" />
