--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.weiducinema.WelComeActivity">
+        <activity android:name="com.example.weiducinema.activity.WelComeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
