--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
     <uses-permission
         android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
         tools:ignore="ProtectedPermissions" />
@@ -49,7 +50,7 @@
         <activity android:name="com.example.weiducinema.activity.WDShowmoiver" />
         <activity android:name="com.example.weiducinema.activity.WDThreeActivity" />
         <activity android:name="com.example.weiducinema.activity.WDDetailsActivity" />
-
+        <activity android:name="com.example.weiducinema.activity.AppropriateActivity"/>
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="VMMQE1cVVo2mKy5wRqdAixDXGbZPDzFX" />
