--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     //获取设备网络状态，禁用后无法获取网络状态
     //网络权限，当禁用后，无法进行检索等相关业务
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -59,7 +61,9 @@
         <activity android:name="com.example.weiducinema.activity.my.MyAttentionActivity" />
         <activity android:name="com.example.weiducinema.activity.my.MyTrackerActivity" />
         <activity android:name="com.example.weiducinema.activity.my.MyOpinionActivity" />
-        <activity android:name="com.example.weiducinema.activity.my.MyNewVersionsActivity"></activity>
+        <activity android:name="com.example.weiducinema.activity.my.MyNewVersionsActivity" />
+        <activity android:name="com.example.weiducinema.activity.cinema.CinemaDetailsActivity" />
+        <activity android:name="com.example.weiducinema.activity.cinema.CinemaChooseActivity"></activity>
     </application>
 
 </manifest>
