添加微信支付

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,11 @@
         <activity android:name="com.example.weiducinema.activity.my.MyNewVersionsActivity" />
         <activity android:name="com.example.weiducinema.activity.cinema.CinemaDetailsActivity" />
         <activity android:name="com.example.weiducinema.activity.cinema.CinemaChooseActivity"></activity>
+        <activity
+            android:name="com.bw.movie.wxapi.WXPayEntryActivity"
+            android:exported="true"
+            android:launchMode="singleTop" />
+
     </application>
 
 
