--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <uses-permission
         android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
@@ -67,7 +70,16 @@
         <activity android:name="com.example.weiducinema.activity.cinema.CinemaDetailsActivity" />
         <activity android:name="com.example.weiducinema.activity.cinema.CinemaChooseActivity" />
         <activity android:name="com.example.weiducinema.activity.my.MyChangePasswordActivity"></activity>
-        
+
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="5c4dac41b465f544360011fa" />
+        // key
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="ceshi" />
+        // 名字
+
         <activity
             android:name="com.bw.movie.wxapi.WXPayEntryActivity"
             android:exported="true"
