--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
 
+        maven { url 'https://dl.bintray.com/umsdk/release' }
     }
 }
 
