--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,7 @@
         // key
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="ceshi" />
+            android:value="${UMENG_CHANNEL_VALUE}" />
         // 名字
 
         <activity
