--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
     <application
         android:name="com.example.weiducinema.app.AppZhuce"
         android:allowBackup="true"
+        android:icon="@drawable/bootpage4"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
