--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,7 @@ android {
     }
     flavorDimensions "versionCode"
     productFlavors {
-        kuan {}
-        xiaomi{}
-        qh360 {}
+        xiaomi {}
 
     }
 
@@ -85,5 +83,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'cn.jzvd:jiaozivideoplayer:6.2.9'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
-    implementation 'com.umeng.analytics:analytics:latest.integration'
+    implementation 'com.umeng.analytics:analytics:6.1.4'
 }
