--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,10 +29,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
-
     <uses-permission
         android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
         tools:ignore="ProtectedPermissions" />
@@ -73,7 +70,7 @@
         <activity android:name="com.example.weiducinema.activity.my.MyNewVersionsActivity" />
         <activity android:name="com.example.weiducinema.activity.cinema.CinemaDetailsActivity" />
         <activity android:name="com.example.weiducinema.activity.cinema.CinemaChooseActivity" />
-        <activity android:name="com.example.weiducinema.activity.my.MyChangePasswordActivity"></activity>
+        <activity android:name="com.example.weiducinema.activity.my.MyChangePasswordActivity" />
 
         <meta-data
             android:name="UMENG_APPKEY"
@@ -83,19 +80,14 @@
             android:name="UMENG_CHANNEL"
             android:value="${UMENG_CHANNEL_VALUE}" />
         // 名字
-
-
         <activity
-            android:name="com.bw.movie.wxapi.WXPayEntryActivity"
+            android:name=".wxapi.WXPayEntryActivity"
             android:exported="true"
             android:launchMode="singleTop" />
-
         <activity
             android:name=".wxapi.WXEntryActivity"
-            android:exported="true"
-            />
-
+            android:exported="true" />
+        <activity android:name="com.example.weiducinema.activity.my.SentSeccussActivity"></activity>
     </application>
-
 
 </manifest>
