--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,11 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
+            buildConfigField "boolean", "LOG_DEBUG", "false" //不显示log
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
         debug {
             signingConfig signingConfigs.config
@@ -43,8 +46,6 @@ android {
         main {
             jniLibs.srcDir 'libs'
         }
-    }
-    productFlavors {
     }
 }
 
@@ -75,12 +76,10 @@ dependencies {
     implementation 'com.j256.ormlite:ormlite-core:5.1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    //implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     implementation 'org.greenrobot:eventbus:3.0.0'
     implementation 'com.android.support:multidex:1.0.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-   // androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'cn.jzvd:jiaozivideoplayer:6.2.9'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
     implementation 'com.umeng.analytics:analytics:6.1.4'
